--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -15,3 +15,135 @@
     background-position: 200% center;
   }
 }
+
+/* Spin loading */
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* Pulse loading */
+@keyframes shadowPulse {
+  0% {
+    background: #e5e7eb;
+    box-shadow:
+      -24px 0 #e5e7eb,
+      24px 0 #e5e7eb;
+  }
+
+  33% {
+    background: #e5e7eb;
+    box-shadow:
+      -24px 0 #006ae6,
+      24px 0 #e5e7eb;
+  }
+  66% {
+    background: #006ae6;
+    box-shadow:
+      -24px 0 #e5e7eb,
+      24px 0 #e5e7eb;
+  }
+  100% {
+    background: #e5e7eb;
+    box-shadow:
+      -24px 0 #e5e7eb,
+      24px 0 #006ae6;
+  }
+}
+
+/* multiple circle loading */
+@keyframes multipleCircle {
+  0%,
+  100% {
+    box-shadow:
+      0em -2.6em 0em 0em rgba(59, 130, 246),
+      1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2),
+      2.5em 0em 0 0em rgba(0, 0, 0, 0.2),
+      1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2),
+      0em 2.5em 0 0em rgba(0, 0, 0, 0.2),
+      -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2),
+      -2.6em 0em 0 0em rgba(59, 130, 246, 0.5),
+      -1.8em -1.8em 0 0em rgba(59, 130, 246, 0.7);
+  }
+  12.5% {
+    box-shadow:
+      0em -2.6em 0em 0em rgba(59, 130, 246, 0.7),
+      1.8em -1.8em 0 0em rgba(59, 130, 246),
+      2.5em 0em 0 0em rgba(0, 0, 0, 0.2),
+      1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2),
+      0em 2.5em 0 0em rgba(0, 0, 0, 0.2),
+      -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2),
+      -2.6em 0em 0 0em rgba(0, 0, 0, 0.2),
+      -1.8em -1.8em 0 0em rgba(59, 130, 246, 0.5);
+  }
+  25% {
+    box-shadow:
+      0em -2.6em 0em 0em rgba(59, 130, 246, 0.5),
+      1.8em -1.8em 0 0em rgba(59, 130, 246, 0.7),
+      2.5em 0em 0 0em rgba(59, 130, 246),
+      1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2),
+      0em 2.5em 0 0em rgba(0, 0, 0, 0.2),
+      -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2),
+      -2.6em 0em 0 0em rgba(0, 0, 0, 0.2),
+      -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
+  }
+  37.5% {
+    box-shadow:
+      0em -2.6em 0em 0em rgba(0, 0, 0, 0.2),
+      1.8em -1.8em 0 0em rgba(59, 130, 246, 0.5),
+      2.5em 0em 0 0em rgba(59, 130, 246, 0.7),
+      1.75em 1.75em 0 0em rgba(59, 130, 246),
+      0em 2.5em 0 0em rgba(0, 0, 0, 0.2),
+      -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2),
+      -2.6em 0em 0 0em rgba(0, 0, 0, 0.2),
+      -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
+  }
+  50% {
+    box-shadow:
+      0em -2.6em 0em 0em rgba(0, 0, 0, 0.2),
+      1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2),
+      2.5em 0em 0 0em rgba(59, 130, 246, 0.5),
+      1.75em 1.75em 0 0em rgba(59, 130, 246, 0.7),
+      0em 2.5em 0 0em rgba(59, 130, 246),
+      -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2),
+      -2.6em 0em 0 0em rgba(0, 0, 0, 0.2),
+      -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
+  }
+  62.5% {
+    box-shadow:
+      0em -2.6em 0em 0em rgba(0, 0, 0, 0.2),
+      1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2),
+      2.5em 0em 0 0em rgba(0, 0, 0, 0.2),
+      1.75em 1.75em 0 0em rgba(59, 130, 246, 0.5),
+      0em 2.5em 0 0em rgba(59, 130, 246, 0.7),
+      -1.8em 1.8em 0 0em rgba(59, 130, 246),
+      -2.6em 0em 0 0em rgba(0, 0, 0, 0.2),
+      -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
+  }
+  75% {
+    box-shadow:
+      0em -2.6em 0em 0em rgba(0, 0, 0, 0.2),
+      1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2),
+      2.5em 0em 0 0em rgba(0, 0, 0, 0.2),
+      1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2),
+      0em 2.5em 0 0em rgba(59, 130, 246, 0.5),
+      -1.8em 1.8em 0 0em rgba(59, 130, 246, 0.7),
+      -2.6em 0em 0 0em rgba(59, 130, 246),
+      -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
+  }
+  87.5% {
+    box-shadow:
+      0em -2.6em 0em 0em rgba(0, 0, 0, 0.2),
+      1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2),
+      2.5em 0em 0 0em rgba(0, 0, 0, 0.2),
+      1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2),
+      0em 2.5em 0 0em rgba(0, 0, 0, 0.2),
+      -1.8em 1.8em 0 0em rgba(59, 130, 246, 0.5),
+      -2.6em 0em 0 0em rgba(59, 130, 246, 0.7),
+      -1.8em -1.8em 0 0em rgba(59, 130, 246);
+  }
+}
