--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* nesting으로 인한 postcss.config.js 설정 필요 */
+/* 
+    'postcss-import': {},
+    'tailwindcss/nesting': {},
+*/
+
 @layer components {
   .radio {
     @apply relative m-0 h-20 w-20 cursor-pointer appearance-none rounded-full border-2 border-solid border-[#d2d8dc] align-middle;
@@ -12,34 +18,31 @@
   .radio:checked::after {
     @apply absolute left-3 top-3 block h-10 w-10 rounded-full bg-[#1668e4] content-[''];
   }
+
+  .pagination {
+    @apply flex gap-8;
+
+    a {
+      @apply flex h-32 w-32 items-center justify-center rounded-4 border border-white p-4 text-14 font-bold;
+    }
+    li.selected {
+      a {
+        @apply border border-purple-500 bg-purple-500 text-white;
+      }
+    }
+  }
 }
 
 @layer utilities {
-  /* nesting으로 인한 postcss 설정 필요 */
-  /* 
-    'postcss-import': {},
-    'tailwindcss/nesting': {},
-  */
   .custom-scrollbar {
     &::-webkit-scrollbar {
-      width: 10px;
-      height: 8px;
+      @apply h-8 w-10;
     }
     &::-webkit-scrollbar-thumb {
-      background: #ccc;
-      border-radius: 8px;
-      background-clip: padding-box;
-      border: 2px solid transparent;
+      @apply rounded-8 border-2 border-transparent bg-[#cecece] bg-clip-padding;
     }
     &::-webkit-scrollbar-track {
-      background-color: #fff;
-      border-radius: 8px;
-      /* 
-        https://developer.mozilla.org/ko/docs/Web/CSS/box-shadow
-        inset 키워드가 존재하면 요소가 움푹 들어간 것처럼
-        그림자가 요소의 테두리 안, 배경색 위, 내부 콘텐츠 밑에 그려집니다. 
-      */
-      box-shadow: inset 0px 0px 4px #999;
+      @apply rounded-8 bg-white shadow-[inset_0_0_4px_#999];
     }
   }
 }
