--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,47 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-/* nesting으로 인한 postcss.config.js 설정 필요 */
+/* nesting시 postcss.config.js 설정  */
 /* 
     'postcss-import': {},
     'tailwindcss/nesting': {},
 */
 
 @layer components {
-  .radio {
-    @apply relative m-0 h-20 w-20 cursor-pointer appearance-none rounded-full border-2 border-solid border-[#d2d8dc] align-middle;
-  }
-  .radio:checked {
-    @apply border-[#1668e4];
-  }
-  .radio:checked::after {
-    @apply absolute left-3 top-3 block h-10 w-10 rounded-full bg-[#1668e4] content-[''];
-  }
-
-  .pagination {
-    @apply flex gap-8;
-
-    a {
-      @apply flex h-32 w-32 items-center justify-center rounded-4 border border-white p-4 text-14 font-bold;
-    }
-    li.selected {
-      a {
-        @apply border border-purple-500 bg-purple-500 text-white;
-      }
-    }
-  }
 }
 
 @layer utilities {
-  .custom-scrollbar {
-    &::-webkit-scrollbar {
-      @apply h-8 w-10;
-    }
-    &::-webkit-scrollbar-thumb {
-      @apply rounded-8 border-2 border-transparent bg-[#cecece] bg-clip-padding;
-    }
-    &::-webkit-scrollbar-track {
-      @apply rounded-8 bg-white shadow-[inset_0_0_4px_#999];
-    }
-  }
 }
