--- a/src/styles/popper.scss
+++ b/src/styles/popper.scss
@@ -1,5 +1,9 @@
-.tooltip {
-  &[data-popper-placement^='top'] > .tooltip-arrow {
+.popper {
+  --arrow-background: #fff;
+  --arrow-border: #9ca3af;
+
+  // top
+  &[data-popper-placement^='top'] > .popper-arrow {
     bottom: -8px;
 
     &::before,
@@ -10,18 +14,19 @@
     /* 배경 */
     &::before {
       bottom: 1.414px;
-      border-color: #fff transparent transparent transparent;
+      border-color: var(--arrow-background) transparent transparent transparent;
       z-index: 10;
     }
     /* 테두리 */
     &::after {
       bottom: 0;
-      border-color: #9ca3af transparent transparent transparent;
+      border-color: var(--arrow-border) transparent transparent transparent;
       z-index: 9;
     }
   }
 
-  &[data-popper-placement^='bottom'] > .tooltip-arrow {
+  // bottom
+  &[data-popper-placement^='bottom'] > .popper-arrow {
     top: -8px;
 
     &::before,
@@ -32,18 +37,19 @@
     /* 배경 */
     &::before {
       top: 1.414px;
-      border-color: transparent transparent #fff transparent;
+      border-color: transparent transparent var(--arrow-background) transparent;
       z-index: 10;
     }
     /* 테두리 */
     &::after {
       top: 0;
-      border-color: transparent transparent #9ca3af transparent;
+      border-color: transparent transparent var(--arrow-border) transparent;
       z-index: 9;
     }
   }
 
-  &[data-popper-placement^='left'] > .tooltip-arrow {
+  // left
+  &[data-popper-placement^='left'] > .popper-arrow {
     right: -8px;
 
     &::before,
@@ -54,18 +60,19 @@
     /* 배경 */
     &::before {
       right: 1.414px;
-      border-color: transparent transparent transparent #fff;
+      border-color: transparent transparent transparent var(--arrow-background);
       z-index: 10;
     }
     /* 테두리 */
     &::after {
       right: 0;
-      border-color: transparent transparent transparent #9ca3af;
+      border-color: transparent transparent transparent var(--arrow-border);
       z-index: 9;
     }
   }
 
-  &[data-popper-placement^='right'] > .tooltip-arrow {
+  // right
+  &[data-popper-placement^='right'] > .popper-arrow {
     left: -8px;
 
     &::before,
@@ -76,19 +83,19 @@
     /* 배경 */
     &::before {
       left: 1.414px;
-      border-color: transparent #fff transparent transparent;
+      border-color: transparent var(--arrow-background) transparent transparent;
       z-index: 10;
     }
     /* 테두리 */
     &::after {
       left: 0;
-      border-color: transparent #9ca3af transparent transparent;
+      border-color: transparent var(--arrow-border) transparent transparent;
       z-index: 9;
     }
   }
 }
 
-.tooltip-arrow {
+.popper-arrow {
   position: relative;
   width: 16px;
   height: 8px;
